--- a/assets/projects/webschool/admin/aluno.html
+++ b/assets/projects/webschool/admin/aluno.html
@@ -41,11 +41,7 @@
         <div class="container">
             <div class="jumbotron text-center">
                 <strong>Alteração de Aluno</strong> <p/>
-                <form action="/webschool/admin/aluno" method="post" role="form" class="form-horizontal " >
-                    <input type="hidden" name="_method" value="PUT" />
-                    <input type="hidden" name="id" id="id" value="{ID}" />
-                    <input type="hidden" name="idAluno" id="idAluno" value="{IDALUNO}" />
-                    <input type="hidden" name="salt" value="{SALT}" />
+                <form action="" method="post" role="form" class="form-horizontal " >
                     <div class="form-group row justify-content-center ">
                         <label for="nome" class="col-form-label col-md-2 col-form-label-sm">Nome:</label>
                         <div class="col-md-3">
