--- a/assets/projects/webschool/admin/alunos.html
+++ b/assets/projects/webschool/admin/alunos.html
@@ -66,7 +66,7 @@
         <div class="container">
             <div class="jumbotron text-center">
                 <strong>Cadastro de Alunos</strong> <p/>
-                <form action="/webschool/admin/aluno" method="post" role="form" class="form-horizontal " >
+                <form action="" method="post" role="form" class="form-horizontal " >
                     <div class="form-group row justify-content-center ">
                         <label for="nome" class="col-form-label col-md-2 col-form-label-sm ">Nome:</label>
                         <div class="col-md-3">
