--- a/assets/projects/webschool/admin/disciplina.html
+++ b/assets/projects/webschool/admin/disciplina.html
@@ -37,9 +37,7 @@
         <div class="container">
             <div class="jumbotron text-center">
                 <strong>Alteração de Disciplina</strong><p/>
-                <form action="/webschool/admin/disciplina" method="post" role="form" class="form-horizontal " >
-                    <input type="hidden" name="_method" value="PUT" />
-                    <input type="hidden" name="id" value="{ID}" />
+                <form action="" method="post" role="form" class="form-horizontal " >
                     <div class="form-group row justify-content-center ">
                         <label for="nome" class="col-form-label col-md-2 col-form-label-sm">Nome da Disciplina:</label>
                         <div class="col-md-3">
