--- a/assets/projects/webschool/admin/disciplinas.html
+++ b/assets/projects/webschool/admin/disciplinas.html
@@ -50,7 +50,7 @@
             <div class="jumbotron text-center">
 
                 <strong>Cadastro de Disciplina</strong><p/>
-                <form action="/webschool/admin/disciplina" method="post" role="form" class="form-horizontal " >
+                <form action="" method="post" role="form" class="form-horizontal " >
                         <div class="form-group row justify-content-center ">
                                 <label for="nome" class="col-form-label col-md-2 col-form-label-sm ">Nome da disciplina:</label>
                                 <div class="col-md-3">
