--- a/assets/projects/webschool/admin/professor.html
+++ b/assets/projects/webschool/admin/professor.html
@@ -41,10 +41,7 @@
         <div class="container">
             <div class="jumbotron text-center">
                 <strong>Alteração de Professor</strong> <p/>
-                <form action="/webschool/admin/professor" method="post" role="form" class="form-horizontal " >
-                    <input type="hidden" name="_method" value="PUT" />
-                    <input type="hidden" name="id" id="id" value="{ID}" />
-                    <input type="hidden" name="salt" value="{SALT}" />
+                <form action="" method="post" role="form" class="form-horizontal " >
                     <div class="form-group row justify-content-center ">
                         <label for="nome" class="col-form-label col-md-2 col-form-label-sm">Nome:</label>
                         <div class="col-md-3">
@@ -69,9 +66,6 @@
                 <strong>Disciplinas por Turma deste Professor</strong><p/>
 
                 <form action="" method="post" role="form" class="form-horizontal " >
-
-                    <input type="hidden" name="professor" value="1">
-                    <input type="hidden" name="id" value="2">
 
                     <div class="form-group row justify-content-center ">
                         <label for="disciplina" class="col-form-label col-md-2 col-form-label-sm">Disciplina:</label>
