--- a/assets/projects/webschool/admin/responsaveis.html
+++ b/assets/projects/webschool/admin/responsaveis.html
@@ -65,7 +65,7 @@
         <div class="container">
             <div class="jumbotron text-center">
                 <strong>Cadastro de Responsaveis</strong> <p/>
-                <form action="/webschool/admin/responsavel" method="post" role="form" class="form-horizontal " >
+                <form action="" method="post" role="form" class="form-horizontal " >
                     <div class="form-group row justify-content-center ">
                         <label for="nome" class="col-form-label col-md-2 col-form-label-sm ">Nome:</label>
                         <div class="col-md-3">
