--- a/assets/projects/webschool/admin/responsavel.html
+++ b/assets/projects/webschool/admin/responsavel.html
@@ -51,10 +51,7 @@
         <div class="container">
             <div class="jumbotron text-center">
                 <strong>Alteração de Responsável</strong> <p/>
-                <form action="/webschool/admin/responsavel" method="post" role="form" class="form-horizontal " >
-                    <input type="hidden" name="_method" value="PUT" />
-                    <input type="hidden" name="id" id="id" value="{ID}" />
-                    <input type="hidden" name="salt" value="{SALT}" />
+                <form action="" method="post" role="form" class="form-horizontal " >
                     <div class="form-group row justify-content-center ">
                         <label for="nome" class="col-form-label col-md-2 col-form-label-sm">Nome:</label>
                         <div class="col-md-3">
@@ -78,18 +75,11 @@
 
                 <p><strong>Cadastrar aluno para responsável</strong></p>
                 
-                <form action="/webschool/admin/alunoPorResponsavel" method="post" role="form" class="form-horizontal " >
-                    <input type="hidden" name="id" value="{ID}" />
-                    <input type="hidden" name="responsavel" value="{RESPONSAVEL}" />
+                <form action="" method="post" role="form" class="form-horizontal " id="alunoPorResponsavelform">
                     <div class="form-group row justify-content-center ">
                         <label for="nome" class="col-form-label col-md-2 col-form-label-sm">Nome:</label>
                         <div class="col-md-3" >
-                            <select name="aluno" class="form-control form-control-sm select-picker"/>
-                                <option value='970'>Aluno ( na 1º Série )</option>
-                                <option value='970'>Aluno ( na 3º Série )</option>
-                                <option value='970'>Aluno ( na 2º Série )</option>
-                                <option value='970'>Aluno ( na 4º Série B )</option>
-                            </select>
+                            <input type="text" name="nome_aluno" id="nome_aluno" class="form-control form-control-sm " data-toggle='modal' data-target='#modalExemplo' autocomplete="off">
                         </div>
                     </div>
                     <a href="responsavel.html" type="submit" class="btn btn-primary btn-sm"><span class='glyphicon glyphicon-plus'></span> Cadastrar</a>
@@ -101,6 +91,32 @@
                         <td><button class='btn btn-danger btn-sm' id='deletar' value='1'><span class='glyphicon glyphicon-remove'></span> Deletar</button></td></tr>
                     </tbody>
                 </table>
+            </div>
+        </div>
+
+        <!-- Modal -->
+        <div class="modal fade" id="modalExemplo" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="exampleModalLabel">Lista de alunos</h5>
+                    </div>
+                    <div class="modal-body">
+                        <table style="font-size: 13px; width: 100%;" class="table hover" id="tableAlunos">
+                            <thead>
+                            <tr>
+                                <td>Nome</td><td></td>
+                            </tr>
+                            </thead>
+                            <tbody>
+                            {ALUNOS}
+                            </tbody>
+                        </table>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-primary" data-dismiss="modal" id="erase-fields">Ok</button>
+                    </div>
+                </div>
             </div>
         </div>
 
