--- a/assets/projects/webschool/admin/turma.html
+++ b/assets/projects/webschool/admin/turma.html
@@ -37,9 +37,7 @@
         <div class="container">
             <div class="jumbotron text-center">
                 <strong>Alteração de Turma</strong><p/>
-                <form action="/webschool/admin/turma" method="post" role="form" class="form-horizontal " >
-                    <input type="hidden" name="_method" value="PUT" />
-                    <input type="hidden" name="id" value="2" />
+                <form action="" method="post" role="form" class="form-horizontal " >
                     <div class="form-group row justify-content-center ">
                         <label for="serie" class="col-form-label col-md-2 col-form-label-sm">Série:</label>
                         <div class="col-md-3">
